--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -101,9 +101,13 @@ LastInViewportMenuLocation=(X=0.000000,Y=0.000000)
 MRUItem0=/Game/1
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+
+[DetailCustomWidgetExpansion]
+BP_FirstPersonCharacter_C=BP_FirstPersonCharacter_C.Physics.ConstraintsGroup,
+CapsuleComponent=BP_FirstPersonCharacter_C.Physics.ConstraintsGroup,
+StaticMeshActor=BP_FirstPersonCharacter_C.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -116,9 +120,16 @@ LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished
-OpenAssetsAtExit=/Game/1_Level/1_Model/Material_002.Material_002
-OpenAssetsAtExit=/Game/StarterContent/Materials/M_Glass.M_Glass
+OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_006.National_Art_Gallery_anu_Cylinder_006
+OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_001.National_Art_Gallery_anu_Layout_001
+OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_002.National_Art_Gallery_anu_Layout_002
+OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane.National_Art_Gallery_anu_Plane
+OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004.National_Art_Gallery_anu_Cylinder_004
+OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_003.National_Art_Gallery_anu_Cylinder_003
+OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001.National_Art_Gallery_anu_Plane_001
+OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_003.National_Art_Gallery_anu_Plane_003
+OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_004.National_Art_Gallery_anu_Plane_004
+OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_005.National_Art_Gallery_anu_Cylinder_005
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -150,6 +161,17 @@ MaterialExpressionVectorParameter="\"Object\" "
 MaterialExpressionParameter="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
 MaterialExpressionConstant="\"Object\" "
+BP_FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+CapsuleComponent="\"Object\" "
+ShapeComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+AssetViewerSettings="\"Object\" "
+StaticMesh="\"Object\" "
+StreamableRenderAsset="\"Object\" "
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -201,6 +223,66 @@ MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionScalarParameter.CustomPrimitiveData=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+BP_FirstPersonCharacter_C.TransformCommon=True
+BP_FirstPersonCharacter_C.Animation=True
+BP_FirstPersonCharacter_C.Mesh=True
+BP_FirstPersonCharacter_C.Clothing=True
+BP_FirstPersonCharacter_C.Physics=True
+BP_FirstPersonCharacter_C.MasterPoseComponent=True
+BP_FirstPersonCharacter_C.Collision=True
+BP_FirstPersonCharacter_C.Lighting=True
+BP_FirstPersonCharacter_C.AnimationRig=True
+BP_FirstPersonCharacter_C.Deformer=True
+BP_FirstPersonCharacter_C.SkinWeights=True
+BP_FirstPersonCharacter_C.Rendering=True
+BP_FirstPersonCharacter_C.HLOD=True
+BP_FirstPersonCharacter_C.Navigation=True
+BP_FirstPersonCharacter_C.VirtualTexture=True
+BP_FirstPersonCharacter_C.Tags=True
+BP_FirstPersonCharacter_C.Activation=True
+BP_FirstPersonCharacter_C.Cooking=True
+BP_FirstPersonCharacter_C.Character Movement (General Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Walking=True
+BP_FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_FirstPersonCharacter_C.Character Movement (Networking)=True
+BP_FirstPersonCharacter_C.Character Movement: Swimming=True
+BP_FirstPersonCharacter_C.Character Movement: Flying=True
+BP_FirstPersonCharacter_C.Character Movement: Custom Movement=True
+BP_FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_FirstPersonCharacter_C.Character Movement=True
+BP_FirstPersonCharacter_C.Character Movement: Avoidance=True
+BP_FirstPersonCharacter_C.RootMotion=True
+BP_FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_FirstPersonCharacter_C.NavMovement=True
+BP_FirstPersonCharacter_C.Velocity=True
+BP_FirstPersonCharacter_C.PlanarMovement=True
+BP_FirstPersonCharacter_C.MovementComponent=True
+BP_FirstPersonCharacter_C.Shape=True
+BP_FirstPersonCharacter_C.Character=True
+BP_FirstPersonCharacter_C.Camera=True
+BP_FirstPersonCharacter_C.Pawn=True
+BP_FirstPersonCharacter_C.Replication=True
+BP_FirstPersonCharacter_C.Input=True
+BP_FirstPersonCharacter_C.Actor=True
+BP_FirstPersonCharacter_C.SkeletalMesh=True
+BP_FirstPersonCharacter_C.Optimization=True
+BP_FirstPersonCharacter_C.LOD=True
+BP_FirstPersonCharacter_C.MaterialParameters=True
+BP_FirstPersonCharacter_C.TextureStreaming=True
+BP_FirstPersonCharacter_C.Mobile=True
+BP_FirstPersonCharacter_C.RayTracing=True
+BP_FirstPersonCharacter_C.AssetUserData=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -317,6 +399,7 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter;
 RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane.National_Art_Gallery_anu_Plane;
 RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_004.National_Art_Gallery_anu_sofa_geo_Leather_mat_0_004;
 RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_001.National_Art_Gallery_anu_sofa_geo_Leather_mat_0_001;
@@ -336,20 +419,48 @@ RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_004.National
 RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_003.National_Art_Gallery_anu_Plane_003;
 RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001.National_Art_Gallery_anu_Plane_001;
 RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004.National_Art_Gallery_anu_Cylinder_004;
-RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_003.National_Art_Gallery_anu_Cylinder_003;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished
-MRUItem1=/Game/1_Level/1_Model/Material_002
-MRUItem2=/Game/StarterContent/Materials/M_Glass
-MRUItem3=/Game/StarterContent/Materials/M_Concrete_Poured
-MRUItem4=/Game/1_Level/1_Model/wood_mat
-MRUItem5=/Game/1_Level/1_Model/Leather_mat
+MRUItem0=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_004
+MRUItem1=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_003
+MRUItem2=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001
+MRUItem3=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane
+MRUItem4=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_002
+MRUItem5=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_001
+MRUItem6=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_006
+MRUItem7=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_005
+MRUItem8=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004
+MRUItem9=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_003
+MRUItem10=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_002
+MRUItem11=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder
+MRUItem12=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_011
+MRUItem13=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_008
+MRUItem14=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_007
+MRUItem15=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_001
+MRUItem16=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube
+MRUItem17=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_001
+MRUItem18=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_006
+MRUItem19=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_004
 
 [AssetEditorToolkitTabLocation]
 /Game/1_Level/1_Model/Leather_mat.Leather_mat=1
 /Game/1_Level/1_Model/wood_mat.wood_mat=1
 /Game/StarterContent/Materials/M_Concrete_Poured.M_Concrete_Poured=1
+/Game/StarterContent/Materials/M_Glass.M_Glass=1
+/Game/1_Level/1_Model/Material_002.Material_002=1
+/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_001.National_Art_Gallery_anu_sofa_geo_Leather_mat_0_001=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane.National_Art_Gallery_anu_Plane=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_004.National_Art_Gallery_anu_sofa_geo_Leather_mat_0_004=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_006.National_Art_Gallery_anu_sofa_geo_Leather_mat_0_006=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_001.National_Art_Gallery_anu_Cylinder_001=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube.National_Art_Gallery_anu_Cube=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_001.National_Art_Gallery_anu_Cube_001=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_007.National_Art_Gallery_anu_Cube_007=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_008.National_Art_Gallery_anu_Cube_008=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_011.National_Art_Gallery_anu_Cube_011=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder.National_Art_Gallery_anu_Cylinder=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_002.National_Art_Gallery_anu_Cylinder_002=1
 
 [MaterialEditor]
 PrimType=1
