--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -101,6 +101,7 @@ LastInViewportMenuLocation=(X=0.000000,Y=0.000000)
 MRUItem0=/Game/1
 
 [/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -120,16 +121,7 @@ LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_006.National_Art_Gallery_anu_Cylinder_006
-OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_001.National_Art_Gallery_anu_Layout_001
-OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_002.National_Art_Gallery_anu_Layout_002
-OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane.National_Art_Gallery_anu_Plane
-OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004.National_Art_Gallery_anu_Cylinder_004
-OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_003.National_Art_Gallery_anu_Cylinder_003
-OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001.National_Art_Gallery_anu_Plane_001
-OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_003.National_Art_Gallery_anu_Plane_003
-OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_004.National_Art_Gallery_anu_Plane_004
-OpenAssetsAtExit=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_005.National_Art_Gallery_anu_Cylinder_005
+OpenAssetsAtExit=/Game/1_Level/1_Painting/Moam_Lisa.Moam_Lisa
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -421,26 +413,26 @@ RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001.National
 RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004.National_Art_Gallery_anu_Cylinder_004;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_004
-MRUItem1=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_003
-MRUItem2=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001
-MRUItem3=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane
-MRUItem4=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_002
-MRUItem5=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_001
-MRUItem6=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_006
-MRUItem7=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_005
-MRUItem8=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004
-MRUItem9=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_003
-MRUItem10=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_002
-MRUItem11=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder
-MRUItem12=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_011
-MRUItem13=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_008
-MRUItem14=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_007
-MRUItem15=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_001
-MRUItem16=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube
-MRUItem17=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_001
-MRUItem18=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_006
-MRUItem19=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_004
+MRUItem0=/Game/1_Level/1_Painting/Moam_Lisa
+MRUItem1=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_004
+MRUItem2=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_003
+MRUItem3=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001
+MRUItem4=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane
+MRUItem5=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_002
+MRUItem6=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_001
+MRUItem7=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_006
+MRUItem8=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_005
+MRUItem9=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004
+MRUItem10=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_003
+MRUItem11=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_002
+MRUItem12=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder
+MRUItem13=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_011
+MRUItem14=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_008
+MRUItem15=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_007
+MRUItem16=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_001
+MRUItem17=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube
+MRUItem18=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_001
+MRUItem19=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_006
 
 [AssetEditorToolkitTabLocation]
 /Game/1_Level/1_Model/Leather_mat.Leather_mat=1
@@ -461,6 +453,16 @@ MRUItem19=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_
 /Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_011.National_Art_Gallery_anu_Cube_011=1
 /Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder.National_Art_Gallery_anu_Cylinder=1
 /Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_002.National_Art_Gallery_anu_Cylinder_002=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_003.National_Art_Gallery_anu_Cylinder_003=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004.National_Art_Gallery_anu_Cylinder_004=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_005.National_Art_Gallery_anu_Cylinder_005=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_006.National_Art_Gallery_anu_Cylinder_006=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_001.National_Art_Gallery_anu_Layout_001=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_002.National_Art_Gallery_anu_Layout_002=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001.National_Art_Gallery_anu_Plane_001=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_003.National_Art_Gallery_anu_Plane_003=1
+/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_004.National_Art_Gallery_anu_Plane_004=1
+/Game/1_Level/1_Painting/Moam_Lisa.Moam_Lisa=1
 
 [MaterialEditor]
 PrimType=1
