--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -99,6 +99,7 @@ LastInViewportMenuLocation=(X=0.000000,Y=0.000000)
 
 [MRU]
 MRUItem0=/Game/1
+MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
@@ -115,13 +116,37 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.Locked=False
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.ActiveTypeFilters=
+ContentBrowserDrawer.EnabledTypeFilters=
+ContentBrowserDrawer.ActiveFrontendFilters=
+ContentBrowserDrawer.EnabledFrontendFilters=
+ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+FavoritePaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/1
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/1_Level/1_Painting/Moam_Lisa.Moam_Lisa
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -140,11 +165,11 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 FbxImportUI="\"Object\" "
-PreviewMaterial="\"Object\" "
-Material="\"Object\" "
-MaterialInterface="\"Object\" "
+PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionTextureSample="\"Object\" "
 MaterialExpressionTextureBase="\"Object\" "
 MaterialExpression="\"Object\" "
@@ -275,6 +300,20 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
+WorldSettings.Broadphase=True
+WorldSettings.Physics=True
+WorldSettings.World=True
+WorldSettings.Lightmass=True
+WorldSettings.GameMode=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.HLODSystem=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.Foliage=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -413,26 +452,26 @@ RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001.National
 RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004.National_Art_Gallery_anu_Cylinder_004;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/1_Level/1_Painting/Moam_Lisa
-MRUItem1=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_004
-MRUItem2=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_003
-MRUItem3=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001
-MRUItem4=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane
-MRUItem5=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_002
-MRUItem6=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_001
-MRUItem7=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_006
-MRUItem8=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_005
-MRUItem9=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004
-MRUItem10=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_003
-MRUItem11=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_002
-MRUItem12=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder
-MRUItem13=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_011
-MRUItem14=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_008
-MRUItem15=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_007
-MRUItem16=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_001
-MRUItem17=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube
-MRUItem18=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_001
-MRUItem19=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_006
+MRUItem0=/Game/Blueprints/FullScreen_Square
+MRUItem1=/Game/1_Level/1_Painting/Moam_Lisa
+MRUItem2=/Game/1
+MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem4=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_004
+MRUItem5=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_003
+MRUItem6=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_001
+MRUItem7=/Game/1_Level/1_Model/National_Art_Gallery_anu_Plane
+MRUItem8=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_002
+MRUItem9=/Game/1_Level/1_Model/National_Art_Gallery_anu_Layout_001
+MRUItem10=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_006
+MRUItem11=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_005
+MRUItem12=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_004
+MRUItem13=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_003
+MRUItem14=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder_002
+MRUItem15=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cylinder
+MRUItem16=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_011
+MRUItem17=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_008
+MRUItem18=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_007
+MRUItem19=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_001
 
 [AssetEditorToolkitTabLocation]
 /Game/1_Level/1_Model/Leather_mat.Leather_mat=1
@@ -463,6 +502,7 @@ MRUItem19=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_mat_0_
 /Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_003.National_Art_Gallery_anu_Plane_003=1
 /Game/1_Level/1_Model/National_Art_Gallery_anu_Plane_004.National_Art_Gallery_anu_Plane_004=1
 /Game/1_Level/1_Painting/Moam_Lisa.Moam_Lisa=1
+/Game/Blueprints/FullScreen_Square.FullScreen_Square=1
 
 [MaterialEditor]
 PrimType=1
@@ -523,4 +563,123 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[WidgetTemplatesExpanded]
+Editor=False
+Experimental=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
