--- a/Saved/Config/WindowsEditor/Engine.ini
+++ b/Saved/Config/WindowsEditor/Engine.ini
@@ -29,6 +29,8 @@ Paths=../../../Engine/Plugins/Runtime/HairStrands/Content
 Paths=../../../Engine/Plugins/Runtime/MeshModelingToolset/Content
 Paths=../../../Engine/Plugins/Runtime/ResonanceAudio/Content
 Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
+Paths=../../../Engine/Plugins/JsonBlueprintUtilities/Content
+Paths=../../../Engine/Plugins/Runtime/WebBrowserWidget/Content
 
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
