--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -107,8 +107,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 SnapScaleEnabled=False
 
 [MRU]
-MRUItem0=/Game/Main_Menu
-MRUItem1=/Game/1
+MRUItem0=/Game/1
+MRUItem1=/Game/Main_Menu
 MRUItem2=/Game/FirstPerson/Maps/FirstPersonMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -188,10 +188,10 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Main_Menu
+LastLevel=/Game/1
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1092,11 +1092,11 @@ RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_sofa_geo_Leather_m
 RecentlyPlaced=/Game/1_Level/1_Model/National_Art_Gallery_anu_Cube_001.National_Art_Gallery_anu_Cube_001;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Main
-MRUItem1=/Game/Main_Menu
-MRUItem2=/Game/1_Level/1_Painting/Van_Goo
-MRUItem3=/Game/1_Level/1_Painting/Material_001
-MRUItem4=/Game/1
+MRUItem0=/Game/1
+MRUItem1=/Game/Main
+MRUItem2=/Game/Main_Menu
+MRUItem3=/Game/1_Level/1_Painting/Van_Goo
+MRUItem4=/Game/1_Level/1_Painting/Material_001
 MRUItem5=/Game/Megascans/Surfaces/Wooden_Floor_whnfeb2/MI_Wooden_Floor_whnfeb2_2K
 MRUItem6=/Game/Blueprints/FullScreen_Square
 MRUItem7=/Game/Blueprints/Painting_WB_Sqiare
